--- a/manuscript/PUMP_Manuscript.Rmd
+++ b/manuscript/PUMP_Manuscript.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "PUMP: Estimating power, MDES, and sample size with multiple outcomes"
+title: "PUMP: Estimating Power, MDES, and Sample Size with Multiple Outcomes"
 output:
   pdf_document:
     keep_tex: true
@@ -35,7 +35,7 @@ set.seed( 1010203 )
 The PUMP R package fills an important gap in open source software and tools needed by researchers to design multi-level randomized controlled trials (RCTs) with sufficient statistical power.
 With this package, researchers can estimate statistical power, minimum detectable effect size (MDES), and needed sample size for multi-level experimental designs, in which units are nested within hierarchical structures such as students nested within schools nested with school districts.
 The statistical power is calculated for estimating the impact of a single intervention on multiple outcomes.
-The package focuses on a frequentist framework of mixed effects regression models, which is currently the prevailing framework for estimating impacts from experiments in education and other social policy research.\footnote{Other options include nonparametric or Bayesian methods, but these are less prevalent in applied research (for example, see @GELMANETAL2012).}
+The package focuses on a frequentist framework of mixed effects regression models, which is currently the prevailing framework for estimating impacts from experiments in education and other social policy research.\footnote{Other options include nonparametric or Bayesian methods, but these are less prevalent in applied research (for example, see @GELMANETAL2012, @GelmanHill2007).}
 To our knowledge, none of the existing software options or tools for power calculations power allow researchers to account for multiple hypothesis tests and the use of a multiple testing procedure (MTP).
 MTPs adjust $p$-values to reduce the likelihood of spurious findings when researchers are testing for effects on multiple outcomes.
 This adjustment can result in a substantial change in statistical power, greatly reducing the probability of detecting effects when they do exist.
@@ -137,7 +137,7 @@ When using an MTP, this probability is controlled to a specified level.
 
 Consider that a researcher is interested in testing the impact of an intervention on $M$ outcomes.
 In our running example of the Diplomas Now study, if we had 5 outcomes in the attendance group, we would have $M = 5$.
-In the frequentist framework, when framing impacts in terms of effect sizes ($ES$), for the outcome $m$, one typically tests a null hypothesis of no effect, $H_{0_m}: ES_m = 0$, against an alternative hypothesis $H_{1_m}: ES_m \neq 0$ for a two-sided tests or $H_{1_m}: ES_m > 0$ or $H1_m: ES_m < 0$ for a one-sided test.
+In the frequentist framework, when framing impacts in terms of effect sizes ($ES$), for the outcome $m$, one typically tests a null hypothesis of no effect, $H_{0_m}: ES_m = 0$, against an alternative hypothesis $H_{1_m}: ES_m \neq 0$ for a two-sided tests or $H_{1_m}: ES_m > 0$ or $H_{1_m}: ES_m < 0$ for a one-sided test.
 A significance test, such as a two- or one-sided $t$-test, would then typically be driven by whether a test statistic given by
 \begin{equation}
 t_m = \frac{\hat{ES}_m}{SE(\hat{ES}_m)},
@@ -181,7 +181,7 @@ This increase may or may not occur with other definitions of power (e.g., the pr
 The MTPs that are the focus of this paper have three key features that affect statistical power (or MDES or needed sample size): (1) whether the MTP is a familywise procedure or a false discovery rate procedure (2) whether the MTP is single-step or stepwise; and (3) whether the MTP takes the correlation between test statistics into account.
 Below we explain each of these features of MTPs and provide discussion of the new parameter specifications they require when estimating power, MDES or sample size requirements.
 
-### Familywise error rate vs. false discovery error rate
+\subsubsection{Familywise error rate vs. false discovery error rate}
 
 Familywise procedures reframe Type I error as a rate across the entire set or “family” of multiple hypothesis tests.
 This rate is called the familywise error rate (FWER; @RN33098).
@@ -234,9 +234,9 @@ MTPs may provide either weak or strong control of the error rate they target.
 An MTP provides weak control of the FWER or the FDR at level $\alpha$ if the control can only be guaranteed when all nulls are true, or when the effects on all outcomes are zero.
 An MTP provides strong control of the FWER or FDR at level if the control is guaranteed when some null hypotheses are true and some are false, or when there may be effects on at least some outcomes.
 Of course, strong control is preferred.\footnote{The single-step and step-down Westfall Young MTPs (which we discuss below) always provide at least weak control of the FWER.
-In order for these procedures to provide strong control of the FWER, they require the assumption of subset pivotality (RN33093).
+In order for these procedures to provide strong control of the FWER, they require the assumption of subset pivotality (@RN33093).
 The distribution of the unadjusted test statistics or $p$-values is said to have subset pivotality if for any subset of null hypotheses, the joint distribution of the test statistics or of the $p-$values for the subset is identical to the distribution under the complete null.
-A consequence of this assumption is that the resampling of test statistics or $p$-values can be done under the complete null hypothesis rather than under the unknown partial hypothesis (RN33093).}
+A consequence of this assumption is that the resampling of test statistics or $p$-values can be done under the complete null hypothesis rather than under the unknown partial hypothesis (@RN33093).}
 
 \subsubsection{Single-step vs. stepwise procedures}
 \label{sec:stepwise}
@@ -247,7 +247,7 @@ Single-step procedures adjust each $p$-value independently of the other
 $p$-values.
 For example, the Bonferroni MTP multiplies all raw $p$-values by $M$.
 Therefore, one $p$-value adjustment does not depend on other $p$-value adjustments, only on the number of tests.
-In contrast, stepwise procedures first order raw p-values (or test statistics), and then adjust according to the order of the tests.
+In contrast, stepwise procedures first order raw $p$-values (or test statistics), and then adjust according to the order of the tests.
 The adjustments depend on null hypotheses already rejected in previous steps.
 For example, the Holm MTP --- the stepwise counterpart to the Bonferroni MTP --- orders raw $p$-values from smallest to largest.
 The procedure then multiplies the smallest $p$-value by $M$, the second smallest $p$-value by $M-1$, and so on, but also enforces that each adjusted $p$-value is greater than or equal to the previous adjusted $p$-value and that it is not greater than one.
@@ -303,7 +303,7 @@ This joint distribution of the test statistics is estimated from the study’s d
 For example, permutations of the treatment indicator can be used to estimate impacts when the association between treatment status and the outcome is broken.
 Random permutations of the research group assignments are conducted a large number of times, resulting in a distribution of test statistics under the complete null.
 Because the actual data are used to generate this null distribution, correlations among the test statistics are captured.
-Then observed test statistics can be compared with the distribution of test statistics under the complete null hypothesis.\footnote{Instead of using test statistics, the Westfall-Young MTPs can alternatively compare raw p-values with the estimated joint null distribution of p-values.}
+Then observed test statistics can be compared with the distribution of test statistics under the complete null hypothesis.\footnote{Instead of using test statistics, the Westfall-Young MTPs can alternatively compare raw $p$-values with the estimated joint null distribution of $p$-values.}
 
 The correlation between test statistics is a parameter a researcher must specify in order to estimate power, MDES or sample size requirements when using an MTP.
 The $M$ pairwise correlations are equal to the $M$ pairwise correlations between the residuals in the $M$ impact models.
@@ -512,11 +512,11 @@ For more details about each combination, see the appendix.
 
 ```{r, echo = FALSE}
 info <- pump_info()
-kable(info$Design[,1:4])
+kable(info$Design[,1:4], format = 'latex')
 ```
 
 
-\subsubsection{Overview of function parameters}
+\subsection{Overview of function parameters}
 \label{sec:params}
 
 The table below shows the parameters that influence $Q_m$ formulae for different designs.
@@ -992,6 +992,12 @@ However, one of the additional strengths of the package is the ease with which a
 Even if a user is only interested in a single outcome, PUMP provides useful functionality for more robust power calculations.
 A user can and should try a range of parameter values to determine the sensitivity of the power of their study to different assumptions; this package simplifies that process.
 
+\section*{Acknowledgements}
+
+We acknowledge the Diplomas Now team.
+Development of this package was supported by a grant from the Institute for Education Sciences (R305D170030).
+We would like to thank members of the Harvard CARES lab for their feedback on the manuscript.
+
 \section{References}
 
 <div id="refs"></div>
@@ -1019,7 +1025,7 @@ For iteration $s = 1, \dots S$:
   
 1. Generate simulated data according to the assumed data generating process (DGP)
 2. Generate simulated treatment assignment
-3. Calculate p-value given simulated data, treatment assignment, and assumed model
+3. Calculate $p$-value given simulated data, treatment assignment, and assumed model
 
 At the end, a 95\% confidence interval for power is calculated, assuming a conservative standard error estimate of $\sqrt{0.25/S}$.
 
@@ -1178,21 +1184,21 @@ We do not vary:
 <!-- Below, we discuss the single-step procedure because it is simpler, although the same concepts hold for the step-down procedure. -->
 <!-- Although it is difficult to verify why this discrepancy occurs, our hypothesis is that this behavior occurs due to the combination of the sensitivity of the WY procedure, and the instability of the random effects model. -->
 
-<!-- The goal of the WY procedure is to estimate the adjusted p-value for outcome $i$ -->
+<!-- The goal of the WY procedure is to estimate the adjusted $p$-value for outcome $i$ -->
 <!-- $$\tilde{p}_i = Pr\left(\min_{1 \leq j \leq k} P_j \leq p_i \mid H_0^C\right).$$ -->
 <!-- where $P_j$ is a random variable representing a $p$-value for outcome $j$, and lowercase $p_i$ is the observed realization for outcome $i$. -->
 <!-- We assume a set of $k$ tests with corresponding null hypotheses $H_{0i}$ for $i = 1, \cdots, k$. -->
 <!-- The complete null hypothesis is the setting where all the null hypotheses are true: $H_0^C = \cap_{i=1}^{k} H_{0i} = \{\text{all } H_i \text{are true}\}$. -->
-<!-- In order to estimate this p-value, the p-value is calculated across $B$ permutations -->
+<!-- In order to estimate this $p$-value, the $p$-value is calculated across $B$ permutations -->
 <!-- $$\tilde{p}_i = \frac{1}{B}\sum_{b = 1}^{B} \mathbb{1}(\min_{1 \leq j \leq k} p_{b,j}^\star \leq p_i).$$ -->
 
-<!-- In order for the procedure to be correct, we should be generating the p-values $P_j$ from the the true distribution of p-values under the null hypothesis. -->
-<!-- We generally are testing outcomes that are truly significant, so the observed p-values are small. -->
-<!-- Thus, looking at these expressions, we are concerned about tail behavior; we are testing whether a small observed p-value is less than the minimum of of the generated p-values of our multiple outcomes. -->
-<!-- This combination of factors means that a small discrepancy in the tails between the generated null distribution and the true distribution could have a large impact on the adjusted p-value. -->
+<!-- In order for the procedure to be correct, we should be generating the $p$-values $P_j$ from the the true distribution of $p$-values under the null hypothesis. -->
+<!-- We generally are testing outcomes that are truly significant, so the observed $p$-values are small. -->
+<!-- Thus, looking at these expressions, we are concerned about tail behavior; we are testing whether a small observed $p$-value is less than the minimum of of the generated $p$-values of our multiple outcomes. -->
+<!-- This combination of factors means that a small discrepancy in the tails between the generated null distribution and the true distribution could have a large impact on the adjusted $p$-value. -->
 
 <!-- Given that we are relying on tail behavior, this explains why we need both a large number of permutations, and a large number of blocks/clusters. -->
 <!-- The large number of permutations is required because we are trying to estimate a rare event. -->
-<!-- With a significant outcome, it is rare that the observed p-value will be less than the minimum of p-values generated from the null distribution. -->
+<!-- With a significant outcome, it is rare that the observed $p$-value will be less than the minimum of $p$-values generated from the null distribution. -->
 <!-- The large number of blocks/clusters is required to accurately estimate the tail behavior for random effects models. -->
 <!-- With a small number of blocks/clusters, we may not properly estimate the spread of the distribution, resulting in a poor estimate of the tail behavior. -->
